fix navbar overflow

--- a/frontend/src/Home/Home.scss
+++ b/frontend/src/Home/Home.scss
@@ -24,6 +24,11 @@
     .bp3-navbar {
         transition: 0.3s;
 
+        > * {
+            // keeps the breadcrumbs from taking all the space
+            max-width: 70%;
+        }
+        
         * {
             transition: 0.3s;
         }
